--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap");
-
+/* Initial Style */
 * {
   box-sizing: border-box;
   margin: 0;
@@ -8,4 +8,48 @@
 
 body {
   font-family: "balsamiq sans", cursive;
+  line-height: 1.5;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+h1,
+h2 {
+  line-height: 1.2;
+  margin: 10px 0;
+}
+
+p {
+  margin: 10px 0;
+}
+
+img {
+  width: 100%;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 40px;
+}
+
+/* UTILITY CLASSES */
+
+.flex {
+  display: flex;
+}
+
+/* NAVBAR STYLE */
+.navbar {
+  background-color: rgb(18, 123, 221);
+  color: white;
+  height: 70px;
 }
