--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ img {
 
 .flex {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 /* NAVBAR STYLE */
@@ -52,4 +55,18 @@ img {
   background-color: rgb(18, 123, 221);
   color: white;
   height: 70px;
+}
+.navbar .flex {
+  justify-content: space-between;
+}
+.navbar ul {
+  display: flex;
+}
+.navbar a {
+  color: white;
+  padding: 10px;
+  margin: 0 5px;
+}
+.navbar a:hover {
+  border-bottom: 2px white solid;
 }
