--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap");
+:root {
+  --primary-color: rgb(18, 123, 221);
+}
+
 /* Initial Style */
 * {
   box-sizing: border-box;
@@ -52,7 +56,7 @@ img {
 
 /* NAVBAR STYLE */
 .navbar {
-  background-color: rgb(18, 123, 221);
+  background-color: var(--primary-color);
   color: white;
   height: 70px;
 }
@@ -69,4 +73,11 @@ img {
 }
 .navbar a:hover {
   border-bottom: 2px white solid;
+}
+
+/* SHOWCASE - HERO */
+
+.showcase {
+  height: 400px;
+  background-color: var(--primary-color);
 }
