--- a/style.css
+++ b/style.css
@@ -62,6 +62,15 @@ img {
   align-items: center;
   height: 100%;
 }
+
+.card {
+  background-color: white;
+  color: #333;
+  border-radius: 10px;
+  box-shadow: 0 3px 10px rgba(0, 0, 0 0.2);
+  padding: 20px;
+  margin: 10px;
+}
 /* NAVBAR STYLE */
 .navbar {
   background-color: var(--primary-color);
@@ -102,4 +111,10 @@ img {
 
 .showcase .grid {
   grid-template-columns: 55% 45%;
+}
+
+.showcase-form {
+  position: relative;
+  top: 60px;
+  height: 350px;
 }
