--- a/style.css
+++ b/style.css
@@ -46,51 +46,6 @@ img {
   padding: 0 40px;
 }
 
-/* UTILITY CLASSES */
-
-.flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.card {
-  background-color: white;
-  color: #333;
-  border-radius: 10px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0 0.2);
-  padding: 20px;
-  margin: 10px;
-}
-
-.btn {
-  display: inline-block;
-  padding: 10px 30px;
-  cursor: pointer;
-  background: var(--primary-color);
-  color: white;
-  border: none;
-  border-radius: 5px;
-}
-
-.btn-outline {
-  background-color: transparent;
-  border: 1px white solid;
-}
-.btn:hover {
-  transform: scale(0.95);
-}
-
 /* NAVBAR STYLE */
 .navbar {
   background-color: var(--primary-color);
@@ -174,4 +129,9 @@ img {
   -webkit-transform: skewY(-3deg);
   -moz-transform: skewY(-3deg);
   -ms-tranform: skewY(-3deg);
+}
+/* STATS */
+
+.stats {
+  padding-top: 100px;
 }
